llm-clients/anythingllm/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anythingllm
  labels:
    kubernetes.io/metadata.name: anythingllm
