llm-clients/anythingllm/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anythingllm
  namespace: anythingllm
spec:
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
    - port: 8889
      targetPort: collector
      protocol: TCP
      name: collector
  selector:
    app: anythingllm
  type: ClusterIP
